deploy/k8s/config/webhook/manifests.yaml

---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-radius-radius-dev-v1alpha1-application
  failurePolicy: Fail
  name: mapplication.kb.io
  rules:
  - apiGroups:
    - applications.radius.dev
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - applications
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-radius-radius-dev-v1alpha1-component
  failurePolicy: Fail
  name: mcomponent.kb.io
  rules:
  - apiGroups:
    - applications.radius.dev
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - components
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-radius-radius-dev-v1alpha1-deployment
  failurePolicy: Fail
  name: mdeployment.kb.io
  rules:
  - apiGroups:
    - applications.radius.dev
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - deployments
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-radius-radius-dev-v1alpha1-scope
  failurePolicy: Fail
  name: mscope.kb.io
  rules:
  - apiGroups:
    - applications.radius.dev
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - scopes
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-radius-radius-dev-v1alpha1-template
  failurePolicy: Fail
  name: mtemplate.kb.io
  rules:
  - apiGroups:
    - applications.radius.dev
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - templates
  sideEffects: None

---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-radius-radius-dev-v1alpha1-application
  failurePolicy: Fail
  name: vapplication.kb.io
  rules:
  - apiGroups:
    - applications.radius.dev
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - applications
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-radius-radius-dev-v1alpha1-component
  failurePolicy: Fail
  name: vcomponent.kb.io
  rules:
  - apiGroups:
    - applications.radius.dev
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - components
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-radius-radius-dev-v1alpha1-deployment
  failurePolicy: Fail
  name: vdeployment.kb.io
  rules:
  - apiGroups:
    - applications.radius.dev
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - deployments
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-radius-radius-dev-v1alpha1-scope
  failurePolicy: Fail
  name: vscope.kb.io
  rules:
  - apiGroups:
    - applications.radius.dev
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - scopes
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-radius-radius-dev-v1alpha1-template
  failurePolicy: Fail
  name: vtemplate.kb.io
  rules:
  - apiGroups:
    - applications.radius.dev
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - templates
  sideEffects: None
